<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context="com.example.administrator.addemo.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/colorWhite">

        <Button
            android:id="@+id/show_button"
            android:text="@string/show_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/show_button_shape"/>

        <Button
            android:id="@+id/my_native_ad"
            android:text="@string/native_Ad"
            android:layout_below="@id/show_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fb_native_button_shape"
            />

        <Button
            android:id="@+id/admob_banner_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admob_banner"
            android:textColor="@color/com_facebook_blue"/>

        <Button
            android:id="@+id/admob_interstitial_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admob_interstitial"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/cloud_mobi_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cloud_mobi"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"/>
    </LinearLayout>

</RelativeLayout>